--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -70,9 +70,19 @@
                             <!-- if  friend -->
                             <% if(locals.friendsList[0].friends.includes(user.username)) {%>
                                 <form action="/removeFriend/<%=user.username%>" method="post"><button  class="btnRemove">Remove <i class="ri-delete-bin-fill"></i></button></form>
+                            
                             <!--  if not friend -->
                             <%}else { %>
-                                <form action="/addFriend/<%=user.username%>" method="post"><button class="btnAdd">Add <i class="ri-user-add-fill"></i></button></form>
+
+                                <!-- if request already send-->
+                                <% if (locals.reqSendList.includes(user.username) || locals.reqReceivedList.includes(user.username)){ %>
+                                    <button class="btnPending">Pending <i class="fa-solid fa-clock"></i></button>
+
+                                <!-- if request not send-->
+                                <%}else { %>
+                                    <form action="/addFriend/<%=user.username%>" method="post"><button class="btnAdd">Add <i class="ri-user-add-fill"></i></button></form>
+                                <%}%>
+
                             <%}%>
                         </li>
                         <%}%>
@@ -82,135 +92,30 @@
                 <h3>Received Requests</h3>
                 <hr>
                 <div class="requestsdiv">
-                    <!-- <div class="user1">
-                        <div class="userdetails">
-                            <div class="userarea">
-                                <div class="profile" >
-                                    <img src="">
-                                </div>
-                                <div class="description">
-                                    <h4>
-                                        James
-                                    </h4>
-                                    <p>
-                                        wanteb dev
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="buttons">
-                                <button class="accept"><p>Accept</p><i class="ri-check-line"></i></button>
-                                <button class="reject"><p>Decline</p><i class="ri-close-line"></i></button>
-                            </div>
-                        </div>
-                    </div>
+
+                    <% for (let req of reqReceivedDetails){%>
                     <div class="user1">
                         <div class="userdetails">
                             <div class="userarea">
                                 <div class="profile" >
-                                    <img src="">
+                                    <img src="/images/uploads/<%=req.profileImage%>">
                                 </div>
                                 <div class="description">
-                                    <h4>
-                                        James
-                                    </h4>
-                                    <p>
-                                        wanteb dev
-                                    </p>
+                                    <h4><%= req.fullname%></h4>
+                                    <p><%= req.username%></p>
                                 </div>
                             </div>
                             <div class="buttons">
-                                <button class="accept"><p>Accept</p><i class="ri-check-line"></i></button>
-                                <button class="reject"><p>Decline</p><i class="ri-close-line"></i></button>
+                                <form action="/reqAccepted/<%=req.username%>" method="post"><button class="accept"><p>Accept</p><i class="ri-check-line"></i></button></form>
+                                <form action="/reqDeclined/<%=req.username%>" method="post"><button class="reject"><p>Decline</p><i class="ri-close-line"></i></button></form>
                             </div>
                         </div>
                     </div>
-                    <div class="user1">
-                        <div class="userdetails">
-                            <div class="userarea">
-                                <div class="profile" >
-                                    <img src="">
-                                </div>
-                                <div class="description">
-                                    <h4>
-                                        James
-                                    </h4>
-                                    <p>
-                                        wanteb dev
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="buttons">
-                                <button class="accept"><p>Accept</p><i class="ri-check-line"></i></button>
-                                <button class="reject"><p>Decline</p><i class="ri-close-line"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user1">
-                        <div class="userdetails">
-                            <div class="userarea">
-                                <div class="profile" >
-                                    <img src="">
-                                </div>
-                                <div class="description">
-                                    <h4>
-                                        James
-                                    </h4>
-                                    <p>
-                                        wanteb dev
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="buttons">
-                                <button class="accept"><p>Accept</p><i class="ri-check-line"></i></button>
-                                <button class="reject"><p>Decline</p><i class="ri-close-line"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user1">
-                        <div class="userdetails">
-                            <div class="userarea">
-                                <div class="profile" >
-                                    <img src="">
-                                </div>
-                                <div class="description">
-                                    <h4>
-                                        James
-                                    </h4>
-                                    <p>
-                                        wanteb dev
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="buttons">
-                                <button class="accept"><p>Accept</p><i class="ri-check-line"></i></button>
-                                <button class="reject"><p>Decline</p><i class="ri-close-line"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user1">
-                        <div class="userdetails">
-                            <div class="userarea">
-                                <div class="profile" >
-                                    <img src="">
-                                </div>
-                                <div class="description">
-                                    <h4>
-                                        James
-                                    </h4>
-                                    <p>
-                                        wanteb dev
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="buttons">
-                                <button class="accept"><p>Accept</p><i class="ri-check-line"></i></button>
-                                <button class="reject"><p>Decline</p><i class="ri-close-line"></i></button>
-                            </div>
-                        </div>
-                    </div> -->
-                    <div class="norequests">
+                    <% } %>
+                    
+                    <!-- <div class="norequests">
                         <img src="/images/NoRequests.png" alt="">
-                    </div>
+                    </div> -->
                     
                 </div>
 
