--- a/public/stylesheets/home_mobile.css
+++ b/public/stylesheets/home_mobile.css
@@ -42,11 +42,14 @@ body{
    
     width:100%;
     height: calc(100% - 64px);
+    background-color: #000000;
     border-radius: 7px;
     overflow: hidden;
+    
     display: flex;
     flex-direction: column;
     gap:4px;
+    border:4px solid black;
    
     
     
@@ -228,6 +231,8 @@ body{
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 0px;
     justify-content: space-between;
+    border: 4px solid black;
+    border-bottom: 1px solid black;
 }
 .selecteduser{
     
@@ -282,6 +287,8 @@ body{
     justify-content: space-between;
     border-top-right-radius: 0px;
     border-top-left-radius: 0px;
+    border:4px solid black;
+    border-top:none;
 }
 #homeForm{
     width:100%;
