--- a/views/global_mobile.ejs
+++ b/views/global_mobile.ejs
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="icon" href="/images/OpenTalkLogo.png">
-    <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./public/stylesheets/logout.css">
+    <link rel="stylesheet" href="/stylesheets/global_mobile.css">
+    <link rel="stylesheet" href="/stylesheets/logout.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/public/stylesheets/logout.css">
+    <link rel="stylesheet" href="/stylesheets/logout.css">
     
 
     <!-- Font Awsome -->
@@ -29,7 +29,7 @@
     <div class="maindiv">
         <div class="firstdiv">
             <div class="firstinnerdiv">
-                <img src="./public/images/OpenTalkLogo.png" alt="logo">
+                <img src="/images/OpenTalkLogo.png" alt="logo">
                 <div class="optionlist">
                     <a href="/profile" class="option"><i class="ri-map-pin-user-line"></i></a>
                     <a href="/home" class="option"><i class="ri-group-2-line friends"></i></a>
@@ -47,7 +47,7 @@
                         </i>
                         
                     </div>
-                    <h4>3 USERS</h4>
+                    <h4><%=online%> USERS</h4>
                 </div>
                 <div class="arrowbtn"><i class="ri-arrow-left-s-line"></i></div>
                 <!---------------------------------------------------------->
@@ -56,172 +56,19 @@
                     <hr style="margin: 10px 0px;border:none; border-bottom: 1px solid rgb(62, 62, 62);">
                     <p>ONLINE USERS</p>
                     <div class="onlineusers">
-                       
+
+                        <%for (let user of onlineUsersList){ %>
                         <div class="user1">
-                            
                             <div class="profile" >    
-                                <img src="">
+                                <img src="/images/uploads/<%=user.profileImage%>">
                             </div>
                             <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
+                                <h4><%= user.fullname%></h4>
+                                <h6><%= user.username%></h6>
                             </div>
                         </div>
 
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
-
-                        <div class="user1">
-                            
-                            <div class="profile" >    
-                                <img src="">
-                            </div>
-                            <div class="description">
-                                <h4>James Rodrigues</h4>
-                                <h6>Front End Dev</h6>
-                            </div>
-                        </div>
+                        <% } %>
                     </div>
                 </div>
                 <!--------------------------------------------------------------->
@@ -244,9 +91,10 @@
         
     </div>
 </body>
-<script src="./index.js"></script>
-<script src="./public/javascripts/logout.js"></script>
+
+<script src="/javascripts/logout.js"></script>
 <script src="/socket.io/socket.io.js"></script>
+<script src="/javascripts/global_mobile.js"></script>
 
 
 </html>
