--- a/public/stylesheets/global_mobile.css
+++ b/public/stylesheets/global_mobile.css
@@ -75,7 +75,7 @@ body{
 }
 
 .secondinnerdiv{
-    height:100%;
+    height:calc(100% - 120px);
     width:100%;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
@@ -84,6 +84,7 @@ body{
     flex-direction: column;
     gap:10px;
     padding:15px;
+    border: 4px solid black;
 }
 
 #globalForm{
@@ -134,10 +135,9 @@ body{
 }
 
 .seconddiv{
-    height:64px;
     overflow: hidden;
     width:100%;
-    background-color: #ffffff;
+    background-color: black;
     display: flex;
     justify-content:space-between;
     align-items: center;
@@ -147,25 +147,24 @@ body{
     
 }
 .arrowbtn{
-    width:50px;
-    height:50px;
-    background-color: #000000;
+    width:47px;
+    height:47px;
+    background-color: white;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    color:white;
+    color:black;
     font-size: 24px;
 }
 .thirdinnerdiv{
     width:200px;
-    height:50px;
+    height:47px;
     padding:4px;
     display: flex;
     align-items: center;
     justify-content:space-between;
     gap:35px;
-    border:1px solid black;
     border-radius: 40px;
     background-color: #FF6606;
     position: relative;
@@ -192,14 +191,14 @@ body{
     transform: translate(-50%, -50%);
 }
 .globalimg{
-    width:40px;
-    height:40px;
+    width:35px;
+    height:35px;
     background-color: #ffffff;
     border-radius: 40px;
     display:flex;
     align-items: center;
     justify-content: center;
-    font-size: 30px;
+    font-size: 25px;
     border: 2px solid rgb(255, 119, 0);
 }
 .fourthinnerdiv{
