--- a/public/stylesheets/global_mobile.css
+++ b/public/stylesheets/global_mobile.css
@@ -266,7 +266,12 @@ body{
     border: 1px solid #ffffff;
 }
 
-
+.profile img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
 #homeForm{
     width:100%;
     height:40px;
