--- a/views/viewProfile.ejs
+++ b/views/viewProfile.ejs
@@ -28,7 +28,7 @@
             <div class="secondinnerdiv">
                 <div class="backgroundImage">
                     <div class="mainlogo">OpenTalk</div>
-                    <a class="return" href="/home">
+                    <a class="return" href="/<%=location%>">
                         <i class="returnIcon ri-close-circle-fill"></i>
                     </a>
                 </div>
