--- a/public/stylesheets/home_mobile.css
+++ b/public/stylesheets/home_mobile.css
@@ -11,7 +11,7 @@ body{
 .maindiv{
     width:100%;
     padding:8px;
-    background-color:#FF6606;
+    background-color:#E1E3E8;
     height:100%;
 }
 .firstdiv{
