--- a/views/addUser_mobile.ejs
+++ b/views/addUser_mobile.ejs
@@ -46,7 +46,7 @@
             <div class="addUserContainer">
                 <div class="titleAndBtn">
                     <h2>Add Friends</h2>
-                    <div class="bellBtn"><i class="ri-notification-3-line"></i></div>
+                    <div value="<%=btnState%>" class="bellBtn"><i class="ri-notification-3-line"></i></div>
                 </div>
                 
                 <hr>
