--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -75,13 +75,14 @@
                         <h4>@<%=username%></h4>
 
                         <form class="descForm" action="/description" method="post">
-                            <textarea rows="7" name="description" text="<%=description%>" class="description" placeholder="Enter your Description" disabled></textarea>
+                            <textarea rows="6" name="description" text="<%=description%>" class="description" placeholder="Enter your Description" disabled></textarea>
                         </form>
                     </div>
                 </div>
 
             </div>
         </div>
+    </div>
         <script src="/javascripts/logout.js"></script>
         <script src="/javascripts/profile.js"></script>
 </body>
