--- a/views/addUser_mobile.ejs
+++ b/views/addUser_mobile.ejs
@@ -68,9 +68,7 @@
                                     <h5>
                                         <%= user.fullname%>
                                     </h5>
-                                    <p>
-                                        <%= user.username%>
-                                    </p>
+                                    <p><%= user.username%></p>
                                 </div> 
                             </div>
                             
