--- a/public/stylesheets/addUser.css
+++ b/public/stylesheets/addUser.css
@@ -85,6 +85,7 @@ body{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     border-radius: 10px;
     padding-left: 20px;
+    padding-right: 20px;
 }
 
 .addUserContainer h2{
@@ -126,8 +127,8 @@ input{
 }
 .existingUserGroup{
     margin-top: 10px;
-    width: 366.6px;
-    height: 350px;
+    width: 100%;
+    height: calc( 100% -185px);
     list-style-type: none;
     overflow: auto;
     scrollbar-width: none; /* Firefox */
@@ -140,6 +141,7 @@ ul::-webkit-scrollbar {
 
 li{
     height: 60px;
+    width:100%;
     border-bottom: 1px solid rgba(128, 128, 128, 0.323);
     display: flex;
     justify-content: flex-start;
@@ -147,6 +149,16 @@ li{
     flex-wrap: wrap;
     gap:15px;
     position: relative;
+}
+.userdetails{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap:10px;
+    flex-wrap: wrap;
+    color: #000000;
+    min-width: 70%;
+    height: 100%;
 }
 
 .profile{
@@ -242,7 +254,7 @@ li{
     gap:10px;
     align-items: center;
 }
-.userdetails{
+.userdetails2nd{
     width:100%;
    height:80px;
     display: flex;
