--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -72,7 +72,7 @@
                                 <%=noOfFrds%> Friends
                             </div>
                         </div>
-                        <h4>@<%=username%></h4>
+                        <h4><%=username%></h4>
 
                         <form class="descForm" action="/description" method="post">
                             <textarea rows="6" name="description" text="<%=description%>" class="description" placeholder="Enter your Description" disabled></textarea>
