--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -7,15 +7,11 @@
     font-family:   Calibri, 'Trebuchet MS', sans-serif;
 }
 
-body{
-    width:100%;
-    height:100vh;
-    
-}
+
 .maindiv{
     padding:25px;
-    width:100%;
-    height:100%;
+    width:100vw;
+    height:100vh;
     background-color:#E2E4E9;
     display: flex;
     gap:5px;
@@ -30,7 +26,7 @@ body{
 }
 .firstinnerdiv{
     min-width:80px;
-    height:100%;
+    min-height:100%;
     background-color: rgb(0, 0, 0);
     border-radius: 10px;
     display:flex;
@@ -240,10 +236,7 @@ body{
 }
 
 @media screen and (max-width:480px){
-    body{
-        width:100vw;
-        height:85vh;
-    }
+   
     .maindiv{
         width:100vw;
         height:100vh;
