--- a/public/stylesheets/global_mobile.css
+++ b/public/stylesheets/global_mobile.css
@@ -5,7 +5,7 @@
     font-family:   Calibri, 'Trebuchet MS', sans-serif;
 }
 body{
-    height: 100vh;
+    height: 100svh;
     width:100vw;
    
 }
