--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -11,7 +11,7 @@ body{
 
 .registerpage{
     
-    height:100vh;
+    height:100%;
     width:100%;
     background-color: rgb(27, 26, 26);
     position: relative;
