--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -135,7 +135,7 @@ body{
 
 .seconddiv{
     height:100%;
-    width:12%;
+    width:17%;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -143,16 +143,20 @@ body{
     border-radius: 10px;
 }
 .thirdinnerdiv{
+    position: relative;
     width:100%;
-    height:40px;
+    height:44px;
     display: flex;
+    justify-content: center;
     align-items: center;
     gap:35px;
+    color: white;
     border-radius: 40px;
     background-color: #FF6606;
 }
 .globe{
     position: relative;
+    color: #000000;
 }
 .online{
     width:8px;
@@ -163,9 +167,9 @@ body{
     bottom:3px;
     right:3px;
     border:1px solid black;
-}
+}s
 .thirdinnerdiv>h4{
-    color: white;
+    color: rgb(255, 255, 255);
 }
 .globalimg{
     width:40px;
@@ -175,6 +179,9 @@ body{
     display:flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    top: 0%;
+    left:0%;
     font-size: 30px;
     border: 2px solid rgb(255, 119, 0);
 }
