--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -189,7 +189,7 @@
 }
 .friendTag{
     padding: 5px 10px;
-    background-color:#FF6606;
+    background-color:#ff660600;
     border-radius: 40px;
     color:white;
     min-width:50px;
@@ -198,7 +198,7 @@
     justify-content: center;
     position: absolute;
     z-index: 99;
-    right: 20px;
+    left: 20px;
     top:20px;
     font-size: small;
     border: 2px solid white;
