--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -7,12 +7,15 @@
     font-family:   Calibri, 'Trebuchet MS', sans-serif;
 }
 
-
+body{
+    height: 100svh;
+    width:100%;
+}
  
 .maindiv{
     padding:25px;
-    width:100vw;
-    max-height:100svh;
+    width:100%;
+    height:100%;
     background-color:#E2E4E9;
     display: flex;
     gap:5px;
