--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -251,10 +251,13 @@ body{
 }
 
 @media screen and (max-width:480px){
-   
-    .maindiv{
+    body{
+        height:100svh;
         width:100vw;
-        height:100vh;
+    }
+    .maindiv{
+        width:100%;
+        height:100%;
         background-color:#E2E4E9;
         padding: 8px;
        
